docs: rewrite README with modular JavaFX guide and modern usage examples
- Overhauled README.md with a new structure, aligned with JPMS and JavaFX 19+
- Added detailed module usage instructions, Maven setup, and quick start guide
- Documented map layers, events, and GeoJSON usage more clearly
- Updated changelog for v1.9.5

build: migrate project to Java 17 with full JPMS support

- Set compiler target to Java 17 in pom.xml
- Updated all JavaFX dependencies to use ${javafx.version} property (19.0.2.1)
- Added lombok annotation processor to support modular build
- Updated maven-compiler-plugin with required --add-modules and --add-opens flags
- Added maven-jar-plugin and maven-surefire-plugin configurations for module support
- Removed use of internal JavaFX APIs (e.g., WebConsoleListener) for module compatibility