@@ -1,123 +1,168 @@
-## Java Leaflet
-Java wrapper for Leaflet, JavaScript library for mobile-friendly interactive maps.
+# Java Leaflet (JLeaflet)
 
-*  Current version: **v1.9.4**
-* Previous version: [v1..6.0](https://github.com/makbn/java_leaflet/tree/release/1.6.0)
+A Java library for integrating Leaflet maps into JavaFX applications with full Java Platform Module System (JPMS) support.
+
+* Current version: **v1.9.5**
 
 Project Source Code: https://github.com/makbn/java_leaflet
 
 ![Java-Leaflet Test](https://github.com/makbn/java_leaflet/blob/master/.github/doc/app.png?raw=true)
-[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2Fmakbn%2Fjava_leaflet.svg?type=shield)](https://app.fossa.com/projects/git%2Bgithub.com%2Fmakbn%2Fjava_leaflet?ref=badge_shield)
 
 > Leaflet is the leading open-source JavaScript library for mobile-friendly interactive maps. Weighing just about 38 KB of JS, it has all the mapping features most > developers ever need.
 > Leaflet is designed with simplicity, performance and usability in mind. It works efficiently across all major desktop and mobile platforms, can be extended with > lots of plugins, has a beautiful, easy to use and well-documented API and a simple, readable source code that is a joy to contribute to.
 
+## Features
 
-## Getting start
+- **Java Platform Module System (JPMS) Compatible**: Fully modularized for Java 17+
+- **JavaFX Integration**: Native JavaFX WebView integration
+- **Multiple Map Providers**: Support for OpenStreetMap, Mapnik, and other tile providers
+- **Interactive Features**: Markers, polygons, polylines, circles, and more
+- **Event Handling**: Comprehensive event system for map interactions
+- **GeoJSON Support**: Load and display GeoJSON data
+- **Customizable**: Extensive customization options for map appearance and behavior
 
-Since you are working on JavaFX application you know you need to have the JavaFX runtime. 
-Read more about installing JavaFx:
-* https://openjfx.io/openjfx-docs/#introduction
+## Requirements
 
-To run the [Leaflet example](src/test/java/io/github/makbn/jlmap/Leaflet.java) class you need to set the module path
-as VM options:
+- **Java**: 17 or higher
+- **JavaFX**: 19.0.2.1 or higher
+- **Maven**: 3.6+ (for building)
 
-```java
---module-path [PATH_TO_JAVA_FX_LIB_FOLDER]
-        --add-exports javafx.web/com.sun.javafx.webkit=ALL-UNNAMED
-        --add-modules=javafx.graphics,javafx.web
+## Module Information
+
+This project is fully modularized using the Java Platform Module System (JPMS). The module name is `io.github.makbn.jlmap`.
+
+### Module Dependencies
+
+The module requires the following dependencies:
+
+- **JavaFX Modules**: `javafx.controls`, `javafx.base`, `javafx.swing`, `javafx.web`, `javafx.graphics`
+- **JDK Modules**: `jdk.jsobject`
+- **Logging**: `org.apache.logging.log4j`, `org.apache.logging.log4j.core`
+- **JSON Processing**: `com.google.gson`, `com.fasterxml.jackson.databind`
+- **Annotations**: `org.jetbrains.annotations`, `lombok`
+
+### Module Exports
+
+The following packages are exported for public use:
+
+- `io.github.makbn.jlmap` - Main package
+- `io.github.makbn.jlmap.layer` - Layer management
+- `io.github.makbn.jlmap.layer.leaflet` - Leaflet-specific layer interfaces
+- `io.github.makbn.jlmap.listener` - Event listeners
+- `io.github.makbn.jlmap.model` - Data models
+- `io.github.makbn.jlmap.exception` - Custom exceptions
+- `io.github.makbn.jlmap.geojson` - GeoJSON support
+
+## Installation
+
+### Maven
+
+Add the following dependency to your `pom.xml`:
+
+```xml
+<dependency>
+    <groupId>io.github.makbn</groupId>
+    <artifactId>jlmap</artifactId>
+    <version>1.9.5</version>
+</dependency>
 ```
 
-There is an issue with JavaFX v17.X javafx.web engine and OSM tiles, I tried JavaFX v19.0.2.1 and it works fine!
+### Module Path
 
-First, you need to initialize an instance of `JLMapView`:
+When running your application, ensure you include the module in your module path:
+
+```bash
+java --module-path /path/to/jlmap-1.9.5.jar --add-modules io.github.makbn.jlmap your.main.Class
+```
+
+## Quick Start
+
+### Basic Map Setup
 
 ```java
-final JLMapView map = JLMapView
-        .builder()
-        .mapType(JLProperties.MapType.OSM_MAPNIK)
-        .showZoomController(true)
-        .startCoordinate(JLLatLng.builder()
-            .lat(51.044)
-            .lng(114.07)
-            .build())
-        .build();
+import io.github.makbn.jlmap.*;
+import io.github.makbn.jlmap.model.JLLatLng;
+import javafx.application.Application;
+import javafx.scene.Scene;
+import javafx.scene.layout.AnchorPane;
+import javafx.stage.Stage;
 
+public class MapExample extends Application {
+    
+    @Override
+    public void start(Stage stage) {
+        // Create a map view
+        JLMapView map = JLMapView.builder()
+                .mapType(JLProperties.MapType.OSM_MAPNIK)
+                .startCoordinate(JLLatLng.builder()
+                        .lat(51.044)
+                        .lng(114.07)
+                        .build())
+                .showZoomController(true)
+                .build();
+        
+        // Create the scene
+        AnchorPane root = new AnchorPane(map);
+        Scene scene = new Scene(root, 800, 600);
+        
+        stage.setTitle("Java Leaflet Map");
+        stage.setScene(scene);
+        stage.show();
+    }
+    
+    public static void main(String[] args) {
+        launch(args);
+    }
+}
 ```
 
 Based on Leaflet JS, you can interact with map in different layers. in this project, you can access different functions with this layer:
+
 * `map` for direct changes on map
 * `map.getUiLayer()` for changes on UI layer like markers.
 * `map.getVectorLayer()` represents the Vector layer on Leaflet map.
 * `map.getControlLayer()` represents the control layer for setting the zoom level.
 * `map.getGeoJsonLayer()` represents the GeoJson layer.
 
-
-### Map functions
-
-Some map view functionalities are available in map layer like `setView` or `setMapListener` as a callback for map events:
-
-* Change the current coordinate of map center:
+### Adding Markers
 
 ```java
+// Add a marker to the UI layer
+map.getUiLayer()
+    .addMarker(JLLatLng.builder()
+        .lat(35.63)
+        .lng(51.45)
+        .build(), "Tehran", true);
+```
+
+
+Controlling map's zoom level and coordinate:
+```java
+// change the current coordinate
 map.setView(JLLatLng.builder()
         .lng(10)
         .lat(10)
         .build());
-```
 
-* Add a listener for map events:
-
-```java
-map.setMapListener(new OnJLMapViewListener() {
-        @Override
-        public void mapLoadedSuccessfully(JLMapView mapView) {
-            
-        }
-
-        @Override
-        public void mapFailed() {
-            log.error("map failed!");
-        }
-
-        @Override
-        public void onAction(Event event) {
-            if (event instanceof MoveEvent moveEvent) {
-                log.info("move event: " + moveEvent.action() + " c:" + moveEvent.center()
-                        + " \t bounds:" + moveEvent.bounds() + "\t z:" + moveEvent.zoomLevel());
-            } else if (event instanceof ClickEvent clickEvent) {
-                log.info("click event: " + clickEvent.center());
-                map.getUiLayer().addPopup(clickEvent.center(), "New Click Event!", JLOptions.builder()
-                        .closeButton(false)
-                        .autoClose(false).build());
-            } else if (event instanceof ZoomEvent zoomEvent) {
-                log.info("zoom event: " + zoomEvent.zoomLevel());
-            }
-        }
-}
-```
-
-Read more about map events from `OnJLMapViewListener.Action`.
-
-### UI Layer
-
-Layer for adding/removing markers and popup. you can access UI layer from `map.getUiLayer()`. As an example:
-
-```java
-map.getUiLayer()
-    .addMarker(JLLatLng.builder()
-                        .lat(35.63)
-                        .lng(51.45)
-                        .build(), "Tehran", true)
-    .setOnActionListener(getListener());
-```
-
-Controlling map's zoom level:
-```java
 // map zoom functionalities
 map.getControlLayer().setZoom(5);
 map.getControlLayer().zoomIn(2);
 map.getControlLayer().zoomOut(1);
+```
+
+### Adding Shapes
+
+```java
+// Add a circle
+map.getVectorLayer()
+    .addCircle(JLLatLng.builder()
+        .lat(35.63)
+        .lng(51.45)
+        .build(), 
+        30000, 
+        JLOptions.builder()
+                .color(Color.BLACK)
+                .build());
 ```
 
 you can add a listener for some Objects on the map:
@@ -136,69 +181,85 @@ marker.setOnActionListener(new OnJLObjectActionListener<JLMarker>() {
    });
 ```
 
+## Building from Source
 
-### Vector layer
+### Prerequisites
 
-Represents the Vector layer for Leaflet map. Poly lines, Polygons, and shapes are available in this layer.
+- Java 17 or higher
+- Maven 3.6+
 
-```java
-map.getVectorLayer()
-        .addCircleMarker(JLLatLng.builder()
-            .lat(35.63)
-            .lng(40.45)
-            .build()
-        );
-``` 
+### Build Commands
 
-### GeoJson layer
-Represents the GeoJson layer for Leaflet map and defines methods for adding and managing
-GeoJSON data layers in a Leaflet map.
-```java
-JLGeoJsonObject geoJsonObject = map.getGeoJsonLayer()
-                        .addFromUrl("https://pkgstore.datahub.io/examples/geojson-tutorial/example/data/db696b3bf628d9a273ca9907adcea5c9/example.geojson");
+```bash
+# Clean and compile
+mvn clean compile
 
-```
-You can add GeoJson data from three different sources:
-* From a file using `map.getGeoJsonLayer().addFromFile([FILE])`
-* From a URL using `map.getGeoJsonLayer().addFromUrl([URL])`
-* From a GeoJson content `map.getGeoJsonLayer().addFromContent([CONTENT])`
-### Styling
+# Run tests
+mvn test
 
-You can pass `JLOptions` to each method for changing the default style! 
+# Package
+mvn package
 
-```java
- map.getVectorLayer()
-        .addCircle(JLLatLng.builder()
-            .lat(35.63)
-            .lng(51.45)
-            .build(), 30000,
-            
-            JLOptions.builder()
-                .color(Color.BLACK)
-                .build()
-        );
+# Install to local repository
+mvn install
 ```
 
-For the map itself, you can choose between themes available in `JLProperties.MapType` class. The `JLProperties.MapType.OSM_MAPNIK` is available to be used without any access key but for the rest of them, you need to define your own map using `JLProperties.MapType` and passing proper list of key-values containing all the necessary access keys. 
-```java
-JLProperties.MapType myMapType = new JLProperties.MapType("HEREv3.terrainDay",
-            Set.of(new JLMapOption.Parameter("apiKey", "<insert apiKey here>")));
-    
-    JLMapView map = JLMapView
-            .builder()
-            .mapType(myMapType)
-            .showZoomController(true)
-            .startCoordinate(JLLatLng.builder()
-                    .lat(51.044)
-                    .lng(114.07)
-                    .build())
-            .build();
+### Module-Aware Building
+
+The project uses Maven's module-aware compilation. The `module-info.java` file defines the module structure and dependencies.
+
+
+## Migration from Non-Modular Version
+
+If you're migrating from a non-modular version:
+
+1. **Update Dependencies**: Ensure all dependencies are module-compatible
+2. **Module Declaration**: Add `module-info.java` to your project
+3. **Import Updates**: Update any internal JavaFX imports
+4. **Build Configuration**: Update Maven configuration for module support
+
+## Troubleshooting
+
+### Common Issues
+
+1. **Module Not Found**: Ensure the module is in your module path
+2. **Internal API Access**: Some JavaFX internal APIs are no longer accessible
+3. **Lombok Issues**: Ensure annotation processing is properly configured
+
+### Module Path Issues
+
+If you encounter module path issues, verify:
+
+```bash
+# Check if the module is properly packaged
+jar --describe-module --file target/jlmap-1.9.5.jar
 ```
 
-Read more:
+## Contributing
 
-* https://github.com/leaflet-extras/leaflet-providers!
+1. Fork the repository
+2. Create a feature branch
+3. Make your changes
+4. Ensure all tests pass
+5. Submit a pull request
 
+## License
+
+This project is licensed under the GNU General Public License v3.0 - see the [LICENSE](LICENSE) file for details.
+
+## Author
+
+**Mehdi Akbarian Rastaghi** (@makbn)
+
+## Changelog
+
+### Version 1.9.5
+- **Major**: Upgraded to Java Platform Module System (JPMS)
+- **Major**: Updated to Java 17 compatibility
+- **Major**: Removed internal JavaFX API dependencies
+- **Enhancement**: Improved module structure and encapsulation
+- **Enhancement**: Updated Maven configuration for module support
+- **Fix**: Resolved Lombok annotation processing in module environment
 
 ## TODO
 
@@ -209,10 +270,8 @@ Read more:
 - [ ] Separating JS and HTML
 - [ ] Publishing package on GitHub
 
+
 **Disclaimer**: I've implemented this project for one of my academic paper in the area of geo-visualization. So, im not contributing actively! One more thing, I'm not a Javascript developer!
 
-
-
-
-## License
-[![FOSSA Status](https://app.fossa.com/api/projects/git%2Bgithub.com%2Fmakbn%2Fjava_leaflet.svg?type=large)](https://app.fossa.com/projects/git%2Bgithub.com%2Fmakbn%2Fjava_leaflet?ref=badge_large)
+### Previous Versions
+See the [GitHub Branches](https://github.com/makbn/java_leaflet/branches) for previous version information.
